# PapyrusPal

./: .gitignore  CONTIBUTING.md  README.md  get_repos.py  license_filter_and_export.py  licenses.py  package.json  permissive_repos.json  pyproject.toml  skyrim_papyrus_repos.json
.github/: copilot-instructions.md
resources/: resources.qrc  styles.qss
resources/images/: convert.txt
resources/styles/: _app.scss
src/example_apps/hello_sidebars_etc/: app.py  app1.py
src/example_apps/mini_test/: app.py
src/example_apps/text_editor_for_lsp/: app.py
src/papyrus_pal/: __main__.py  app.py  application.py  main.py
src/papyrus_pal/app/: __main__.py  application.py
src/papyrus_pal/app/widgets/: source_code_textbox.py
src/papyrus_pal/app/windows/: main_window.py
src/papyrus_pal/syntax_highlighting/: syntax_highlighter.py
src/papyrus_pal/syntax_highlighting/themes/: nord.py
src/papyrus_pal/widgets/: source_code_textbox.py
src/papyrus_pal/widgets/source_code_editor/: line_number_area.py  source_code_textbox.py
src/papyrus_pal/windows/: main_window.py
src/papyruspad/: __main__.py  app.py  application.py  main.py
src/papyruspad/syntax_highlighting/: syntax_highlighter.py
src/papyruspad/syntax_highlighting/themes/: dark.py  light.py  monokai.py
src/papyruspad/widgets/source_code_editor/: source_code_textbox.py
src/papyruspad/windows/: main_window.py
src/qt_helpers/: __init__.py  files.py  fonts.py  run_app.py  styles.py  widget.py  window.py
src/qt_helpers/typing/: __init__.py  signal_typing.py
src/skyrim_mod_maker/app/: __main__.py  app_instance.py  main.py
src/skyrim_mod_maker/app/windows/: main_window.py
